--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+ul {
+    transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
+}
+  
