--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-/* 
-.imgback{
-    display: none;
-} */
+
+
+html {
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* Internet Explorer */
+  }
+  
+  html::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Edge */
+  }
